# bt_ace

./: .gitattributes  README.md  TODO  repos.vc
ace/: affordance_graph.yaml  primitive_taxonomy.yaml
bt_cpp/: CMakeLists.txt  README.md  package.xml
bt_cpp/bt_xml/: BT_1.xml  BT_2.xml  BT_3.xml  BT_4.xml  BT_5.xml  BT_6.xml  bt_goto_luma.xml  do_Survey.xml  full_mission_a.xml  full_mission_b.xml  goto.xml  goto_luma.xml  iauv_girona1000_survey_circular_true.xml  iauv_girona1000_survey_scan.xml  iauv_girona1000_survey_scan_backup.xml  last_bt.xml  look_at_Sphere.xml  look_at_cube.xml  manipulate.xml  observe.xml  observe_cube.xml  scan.xml  touch.xml
bt_cpp/include/bt_cpp/: bt_manager.h  dock_interact_node.h  follow_path_node.h  inspect_node.h  is_path_clear_node.h  log_nodes.h  mission_utils.h  object_sorter.h  path_request_node.h  point_cloud_processor.h  primitive_detection_client.h  utils.h  wait_event_node.h
bt_cpp/launch/: bt_llm_a_b.launch  scenario_dual.launch  scenario_single.launch
bt_cpp/llm_bt_xml/: scan.xml
bt_cpp/llm_bt_xml_a/: full_mission_a.xml.executed  full_mission_a.xml.executed_2  initialize_mission.xml  initialize_mission.xml.executed  scan.xml  scan.xml.executed  topics.txt
bt_cpp/llm_bt_xml_a/bt_xml_primitive/: a_look_at_cone.xml  a_scan.xml  a_vlc_comm_a.xml  a_vlc_comm_b.xml  b_vlc_comm_a.xml
bt_cpp/llm_bt_xml_b/: full_mission_b.xml.executed
bt_cpp/llm_bt_xml_b/bt_xml_primitive/: a_vlc_comm_a.xml
bt_cpp/msg/: LabeledObjInfo.msg
bt_cpp/nodes/: bt_manager.cpp  dock_interact_node.cpp  follow_path_node.cpp  inspect_node.cpp  is_path_clear_node.cpp  mission_utils.cpp  object_sorter.cpp  path_request_node.cpp  primitive_detection_client.cpp  wait_event_node.cpp
bt_cpp/other_repo_modifications/: README.md
bt_cpp/other_repo_modifications/girona_utils/: README.md
bt_cpp/other_repo_modifications/girona_utils/scripts/: pursuit_controller.cpp
bt_cpp/other_repo_modifications/iauv_demo/: README.md
bt_cpp/other_repo_modifications/iauv_demo/iauv_description/launch/: single_robot.launch
bt_cpp/other_repo_modifications/iauv_demo/iauv_description/launch/core/: girona1000_base.launch.core
bt_cpp/scripts/: detect_object.py  odometry_girona.py
bt_cpp/src/: bt_manager.cpp  exec_bt_manager.cpp  exec_llm_bt_manager.cpp  exec_llm_bt_manager_a.cpp  exec_llm_bt_manager_b.cpp  main.cpp  scan_path.cpp
launch/: octomap.launch
pcl_geometric_primitives_detector/: CMakeLists.txt  README.md  package.xml
pcl_geometric_primitives_detector/ace/: affordance_graph.yaml  mission.txt  mission_Alpha.txt  mission_Beta.txt  primitive_taxonomy.yaml
pcl_geometric_primitives_detector/launch/: mock_labeled_clustering.launch  perception.launch
pcl_geometric_primitives_detector/msg/: ClusterObjInfo.msg  SimulationInfo.msg
pcl_geometric_primitives_detector/pcl_bags/: cluster_0.pcd  octomap_point_cloud_centers.pcd
pcl_geometric_primitives_detector/scripts/: affordanceGraphN.py  get_actions_mock.py  label_obj_pub_mock.py  llm_bt_ros1.py  llm_bt_ros_alpha.py  llm_bt_ros_beta.py  marker_llm.py  object_sensing_ACE.py  operator_label_2_obj_label.py  pcd_accumulator.py  pcd_compressor.py  service.txt  store_pointcloud.py  topics.txt
pcl_geometric_primitives_detector/src/: pcl_geometric_primitives_detector.cpp
pcl_geometric_primitives_detector/srv/: AddAffordance.srv  CheckRelation.srv  Cluster.srv  ClusterResponse.srv  CreateGUI.srv  DisplayGraph.srv  ExportGraph.srv  GetActions.srv  GetTaxonomy.srv  PlanGoal.srv  QueryFullGraph.srv
